--- a/.github/workflows/rama.yml
+++ b/.github/workflows/rama.yml
@@ -1,4 +1,4 @@
-name: Auto Merge and Version Bump
+name: Versión de Rama David-t v1
 
 on:
   push:
@@ -32,16 +32,23 @@ jobs:
           last_commit_message=$(git log -1 --pretty=%B)
           echo "commit_message=$last_commit_message" >> $GITHUB_ENV
 
-      - name: Increment version number
+      - name: Extract last version and bump it
         id: bump_version
         run: |
-          version=$(echo "${{ env.GITHUB_CONTEXT_commit_message }}" | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+')
-          IFS='.' read -r -a parts <<< "$version"
-          parts[2]=$((parts[2]+1))
-          new_version="${parts[0]}.${parts[1]}.${parts[2]}"
-          echo "new_version=$new_version" >> $GITHUB_ENV
-          
+          # Extract version part from the commit message
+          version=$(echo "${{ env.commit_message }}" | grep -o 'Versión [0-9]\+\.[0-9]\+\.[0-9]\+\.[0-9]\+\.[0-9]\+')
+          if [ -z "$version" ]; then
+            echo "No version found in the commit message."
+            exit 1
+          fi
+          # Extract the version numbers
+          version_numbers=$(echo "$version" | grep -o '[0-9]\+\.[0-9]\+\.[0-9]\+\.[0-9]\+\.[0-9]\+')
+          IFS='.' read -r -a parts <<< "$version_numbers"
+          parts[4]=$((parts[4]+1))
+          new_version="${parts[0]}.${parts[1]}.${parts[2]}.${parts[3]}.${parts[4]}"
+          echo "new_version=Versión $new_version (Unión de Ramas)" >> $GITHUB_ENV
+
       - name: Commit new version
         run: |
-          git commit --allow-empty -m "Versión ${{ env.GITHUB_CONTEXT_commit_message }} (Unión de Ramas)"
+          git commit --allow-empty -m "${{ env.new_version }}"
           git push origin David-t
