--- a/.github/workflows/rama.yml
+++ b/.github/workflows/rama.yml
@@ -38,7 +38,7 @@ jobs:
           # Extract version part from the commit message
           version=$(echo "${{ env.commit_message }}" | grep -o 'Versión [0-9]\+\.[0-9]\+\.[0-9]\+\.[0-9]\+\.[0-9]\+')
           if [ -z "$version" ]; then
-            echo "No version found in the commit message."
+            echo "No se encontró ninguna versión."
             exit 1
           fi
           # Extract the version numbers
